agrege el index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="Galery/favicon-32x32.png"
     />
     <link rel="stylesheet" href="Style/style.css" />
+    <script src="Scripts/scripts.js" defer></script>
     <title>Desafio</title>
   </head>
 
@@ -26,7 +27,7 @@
         <a href="#" class="enlace">Learn more</a>
       </article>
       <!-- Columna -->
-      <article class="columna suvs">
+      <article class="columna activa suvs">
         <img src="Galery/icon-suvs.svg" alt="SUVs" class="icono" />
         <h2 class="titulo">SUVs</h2>
         <p class="texto">
